<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home"
    tools:context=".Home">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintHorizontal_bias="0.5"
        android:src="@drawable/logohome"

        />

    <Button
        android:id="@+id/botonhoteles"
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.5"
        android:backgroundTint="@color/botones"
        android:fontFamily="cursive"
        android:text="@string/hotele"
        android:textSize="20dp"


        />

    <Button
        android:id="@+id/botonrestaurante"
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintHorizontal_bias="0.5"
        android:backgroundTint="@color/botones"
        android:text="@string/restaurante"
        android:textSize="20dp"
        android:fontFamily="cursive"
        />

    <Button
        android:id="@+id/botonturismo"
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintHorizontal_bias="0.5"
        android:backgroundTint="@color/botones"
        android:fontFamily="cursive"
        android:text="@string/sitio"
        android:textSize="20dp"

        />

    <TextView


        android:layout_width="200dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.83"
        app:layout_constraintHorizontal_bias="0.5"
        android:text="@string/bienvenido"
        android:fontFamily="cursive"
        android:textSize="40dp"
        android:textAlignment="center"
        android:textColor="@color/white"

        />

    <TextView

        android:id="@+id/cliente"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintHorizontal_bias="0.5"
        android:text="Cliente"
        android:fontFamily="cursive"
        android:textSize="40dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        />




</androidx.constraintlayout.widget.ConstraintLayout>