<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hotelbg"
    tools:context=".Turismo">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fotos"
        />

    <TextView
        android:layout_width="350dp"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintHorizontal_bias="0.5"
        android:text="@string/sitio"
        android:textAlignment="center"
        android:textSize="55dp"
        android:textColor="@color/azul"
        android:textStyle="bold"
        android:fontFamily="cursive"
        />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.18"
        app:layout_constraintHorizontal_bias="0.2"
        android:src="@drawable/location"

        />

    <TextView
        android:layout_width="350dp"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintHorizontal_bias="0.5"
        android:text=""
        android:textAlignment="center"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        />
    <Button
        android:layout_width="500dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias=".95"
        app:layout_constraintHorizontal_bias="0.5"
        android:backgroundTint="@color/hoteles"
        android:textStyle="bold"
        android:text="@string/ver"
        android:textSize="20dp"
        android:fontFamily="cursive"


        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintHorizontal_bias="0.8"
        android:text="@string/sitios"
        android:textSize="20dp"
        android:textColor="@color/azul"
        android:textStyle="bold"
        android:textAlignment="center"
        />

</androidx.constraintlayout.widget.ConstraintLayout>